--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.1",
   "private": true,
   "devDependencies": {
+    "amdefine": "^1.0.1",
     "autoprefixer": "6.5.1",
     "babel-core": "6.17.0",
     "babel-eslint": "7.1.1",
     "babel-jest": "17.0.2",
     "babel-loader": "6.2.7",
     "babel-preset-react-app": "^2.0.1",
+    "bignumber.js": "^4.0.2",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
@@ -18,11 +20,16 @@
     "dotenv": "2.0.0",
     "eslint": "3.8.1",
     "eslint-config-react-app": "^0.5.0",
+    "eslint-config-standard": "^10.2.1",
     "eslint-loader": "1.6.0",
     "eslint-plugin-flowtype": "2.21.0",
+    "eslint-plugin-html": "^2.0.3",
     "eslint-plugin-import": "2.0.1",
     "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-node": "^5.0.0",
+    "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "6.4.1",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
@@ -32,6 +39,7 @@
     "http-proxy-middleware": "0.17.2",
     "jest": "17.0.2",
     "json-loader": "0.5.4",
+    "node-int64": "^0.4.0",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
@@ -47,7 +55,8 @@
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "1.0.0",
+    "xhr2": "^0.1.4"
   },
   "dependencies": {
     "dotenv": "^2.0.0",
